@@ -1,13 +1,12 @@
 Source: libcnotify
-Section: unknown
+Section: libs
 Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
 Build-Depends: debhelper (>= 7), autotools-dev
-Standards-Version: 3.8.3
+Standards-Version: 3.9.5
 Homepage: https://github.com/libyal/libcnotify/
 
 Package: libcnotify
-Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: libcnotify-dbg
@@ -17,14 +16,14 @@ Description: Library to support cross-platform C notification functions
 Package: libcnotify-dbg
 Architecture: any
 Section: debug
-Depends: libcnotify (= ${Source-Version}), ${misc:Depends}
+Depends: libcnotify (= ${binary:Version}), ${misc:Depends}
 Description: Debugging symbols for libcnotify
  Debugging symbols for libcnotify.
 
 Package: libcnotify-dev
 Section: libdevel
 Architecture: any
-Depends: libcnotify (= ${Source-Version})
+Depends: libcnotify (= ${binary:Version}), ${misc:Depends}
 Description: Header files and libraries for developing applications for libcnotify
  Header files and libraries for developing applications for libcnotify.
 
