@@ -1,6 +1,9 @@
 TODO
 * remove libcnotify_types.h
 
+20141229
+* updated dpkg files
+
 20141014
 * changes for deployment
 
